post events to neo4j

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "express-x-hub": "^1.0.4"
+    "express-x-hub": "^1.0.4",
+    "moment": "^2.13.0",
+    "neo4j": "^2.0.0-RC2"
   }
 }
