--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "express-x-hub": "^1.0.4",
+    "gen-id": "^0.1.1",
     "lodash": "^4.12.0",
     "moment": "^2.13.0",
     "neo4j": "^2.0.0-RC2"
