--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "es6-error": "^3.0.0",
     "express": "^4.13.4",
     "express-x-hub": "^1.0.4",
     "gen-id": "^0.1.1",
     "lodash": "^4.12.0",
     "moment": "^2.13.0",
     "neo4j": "^2.0.0-RC2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
