--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "devDependencies": {
     "babel-eslint": "^6.0.4",
     "chai": "^3.5.0",
+    "chakram": "^1.3.0",
     "eslint": "^2.10.2",
+    "fixture-loader": "^1.0.0",
+    "request": "^2.72.0",
     "sinon": "^1.17.4"
   }
 }
