--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chakram": "^1.3.0",
     "eslint": "^2.10.2",
     "fixture-loader": "^1.0.0",
+    "node-uuid": "^1.4.7",
     "request": "^2.72.0",
     "sinon": "^1.17.4"
   }
